# guard-trafficserver

./: .gitignore  Makefile.am  README.md  configure.ac
src/: guard.cc  utils.cc
src/include/ltguard/: guard.h  utils.h
tests/: test_guard.cc
